--- a/LoudMouth.cmp
+++ b/LoudMouth.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by Cvpcb 0.201505220134+5676~23~ubuntu14.04.1-product   date = Wed 09 Sep 2015 11:40:17 PM PDT
+Cmp-Mod V01 Created by Cvpcb 0.201505220134+5676~23~ubuntu14.04.1-product   date = Thu 10 Sep 2015 12:16:44 AM PDT
 
 BeginCmp
 TimeStamp = /55F1249C;
@@ -50,9 +50,9 @@ IdModule  = Pin_Headers:Pin_Header_Straight_1x02;
 EndCmp
 
 BeginCmp
-TimeStamp = /55F12615;
+TimeStamp = /55F17610;
 Reference = Q101;
-ValeurCmp = Q_NPN_BCE;
+ValeurCmp = Q_NPN_EBC;
 IdModule  = Housings_TO-92:TO-92_Molded_Narrow;
 EndCmp
 
@@ -103,6 +103,27 @@ TimeStamp = /55F12434;
 Reference = R107;
 ValeurCmp = R;
 IdModule  = Resistors_SMD:R_0805_HandSoldering;
+EndCmp
+
+BeginCmp
+TimeStamp = /55F1613F;
+Reference = TP101;
+ValeurCmp = CONN_01X01;
+IdModule  = Measurement_Points:Measurement_Point_Round-SMD-Pad_Big;
+EndCmp
+
+BeginCmp
+TimeStamp = /55F162D1;
+Reference = TP102;
+ValeurCmp = CONN_01X01;
+IdModule  = Measurement_Points:Measurement_Point_Round-SMD-Pad_Big;
+EndCmp
+
+BeginCmp
+TimeStamp = /55F1666E;
+Reference = TP103;
+ValeurCmp = CONN_01X01;
+IdModule  = Measurement_Points:Measurement_Point_Round-SMD-Pad_Big;
 EndCmp
 
 EndListe
